# arhitektor

./: BusStation.hpp  BusinessLogicalLayer.hpp  CMakeLists.txt  Car.hpp  Core.hpp  Customer.hpp  CustomerProvider.hpp  Database.hpp  DatabaseAccess.hpp  Editor3D.hpp  EditorBusinessLogicalLayer.hpp  EditorDatabase.hpp  EditorDatabaseAccess.hpp  Entity.hpp  InMemoryModel.hpp  MobilApp.hpp  Model3D.hpp  MyException.hpp  PaymentProvider.hpp  ProjectFile.hpp  README.md  Refueling.hpp  Singleton.drawio  Singleton.h  Texture.hpp  Ticket.hpp  TicketProvider.hpp  UILayer.hpp  Wiping.hpp  lesson4.drawio  main.cpp  Диаграмма без названия.drawio
Domain/: Note.hpp
ModelElements/: Camera.hpp  Flash.hpp  Poligon.hpp  PoligonalModel.hpp  Scene.hpp  Texture.hpp
Objects3D/: Angle3D.hpp  Color.hpp  Point3D.hpp
application/: ConcreteNoteEditor.hpp
application/interface/: Editor.hpp  NoteEditor.hpp  NotesDatabaseContext.hpp  NotesPresenter.hpp
database/: NotesDatabase.hpp  NotesRecord.hpp  NotesTable.hpp
infrastructure/persistance/: Database.hpp  DatabaseContext.hpp  DbContext.hpp  ModelBuilder.hpp  ModelConfiguration.hpp
infrastructure/persistance/entityconfiguration/: NoteConfiguration.hpp
presentation/queries/controllers/: Controller.hpp  NotesController.hpp
presentation/queries/views/: NotesConsolePresenter.hpp  Presenter.hpp
spa/: index.html
spa/js/: router.js
spa/pages/: 404.html  about.html  history.html  home.html  settings.html
